--- a/view/popup_point_confirmation.ejs
+++ b/view/popup_point_confirmation.ejs
@@ -43,7 +43,7 @@
         }
 
         updatePoint() {
-            const keypad = document.getElementById("keypadFrame");
+            const keypad = document.getElementById("keypadArea");
             const checkBtn = document.getElementById("checkBtn");
 
             const usePointArea = document.getElementById("usePoint");
