--- a/view/layout.ejs
+++ b/view/layout.ejs
@@ -26,12 +26,12 @@
             <% } %>
             <!-- 페이지 콘텐츠 영역 -->
             <% if ( content !== "" ) { %>
-                <%- include( content ) %>
+                <%- include( content, {queryData: queryData}) %>
             <% } %>
             
             <!-- 팝업 영역 -->
             <% if ( popup !== "") { %>
-                <%- include( "popup_layout", { popupContent: popup} ) %>
+                <%- include( "popup_layout", { popupContent: popup, queryData: queryData} ) %>
             <% } %>
         </section>
         <!-- ===하단바 영역=== -->
@@ -39,6 +39,8 @@
             <%- include( bottomBar ) %>
         <% } %>
     </div>
+    <script>
+        
+    </script>
 </body>
-
 </html>
