--- a/view/popup_layout.ejs
+++ b/view/popup_layout.ejs
@@ -1,7 +1,7 @@
 <!-- ===팝업 영역=== -->
 <div id="popupBackground" class="popupBackground"></div>
 <section id="popupArea" class="popupArea">
-    <%- include( popupContent ) %>
+    <%- include( popupContent, {queryData: queryData} ) %>
 </section>
 
 <script>
