--- a/view/popup_select_headcount.ejs
+++ b/view/popup_select_headcount.ejs
@@ -118,6 +118,11 @@
 <script>
     const selectPeopleBtn = document.getElementById("selectPeopleBtn");
     const headcountCurrent = document.getElementById("headcountCurrent");
+    const queryData = <%- JSON.stringify(queryData) %>;
+    //console.log(queryData)
+    // const urlParams = new URLSearchParams(window.location.search);
+    // const key = urlParams//.get('key1');
+    // console.log(key);
 
     // JSON으로 빠져야하는 객체
     const movieData = {
@@ -183,15 +188,29 @@
                     if (item != document.getElementById(event.target.id)) {
                         item.checked = false;
                     }
-                })
-            })
-        })
+                });
+            });
+        });
+    }
+
+    const makeQuery = (queryData) => {
+        let query = "";
+        for (const clientType in movieData) {
+            queryData[clientType] = movieData[clientType];
+        }
+        for (const key in queryData) {
+            query += `${key}=${queryData[key]}&`;
+        }
+        return query;
     }
 
     selectPeopleBtn.addEventListener("click", () => {
-        window.location.href = "/select_seat";
+        const query = makeQuery(queryData);
+
+        window.location.href = `/select_seat?${query}`;
     });
 
+    console.log(queryData);
 </script>
 
 <style>
@@ -313,7 +332,7 @@
         letter-spacing: 0.03rem;
     }
 
-    .infoIcon{
+    .infoIcon {
         color: #dbdbdb;
         font-size: 1.7rem;
         padding: 0;
@@ -331,12 +350,14 @@
         outline: none;
         font-weight: 750;
     }
-    .valueFalse{
+
+    .valueFalse {
         background: #DE1E2D;
         color: #fff;
         font-weight: 600;
 
     }
+
     /* Chrome, Safari, Edge, Opera */
     input::-webkit-outer-spin-button,
     input::-webkit-inner-spin-button {
