--- a/view/content_select_movie_time.ejs
+++ b/view/content_select_movie_time.ejs
@@ -247,7 +247,7 @@
         text-align: center;
         color: white;
         border-radius: 5px;
-        padding: 5px;
+        padding: 0.8rem 0.5rem 0.5rem 0.5rem;
         margin: 1rem 0.78rem 0 0;
         cursor: pointer;
         background: transparent;
@@ -259,7 +259,9 @@
     }
 
     .blockClick {
-        background-color: yellow;
+        background-color: #90979D;
+        opacity: 30%;
+        pointer-events: none;
     }
 
     .activeMvTime {
