--- a/view/layout.ejs
+++ b/view/layout.ejs
@@ -31,7 +31,7 @@
             
             <!-- 팝업 영역 -->
             <% if ( popup !== "") { %>
-                <%- include( "popup_layout", { popupContent: popup, queryData: queryData} ) %>
+                <%- include( "popup_layout", { popupContent: popup } ) %>
             <% } %>
         </section>
         <!-- ===하단바 영역=== -->
